--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Style Tile and Style Prototype of ADSO, the Art and Design Society of Fort Walton Beach.">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
