Divide index page semantically

--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
+    <div id="container">
+        <header>
+        </header>
 
+        <section id="images">
+        </section>
 
+        <section id="colors">
+        </section>
 
+        <section id="buttons">
+        </section>
+
+        <aside id="fonts">
+        </aside>
+
+        <footer></footer>
+    </div>
     <script src="js/main.js"></script>
 </body>
+
 </html>
