Position header absolute, insert title

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
         <header>
+            <h1>Final - Part 2</h1>
+            <p>Style Tile - <span class="italic">Version 1</span></p>
         </header>
 
         <div id="container">
