Insert Logo figures

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         <header>
             <h1>Final - Part 2</h1>
             <p>Style Tile - <span class="italic">Version 1</span></p>
+            <div id="logo-box">
+                <figure>
+                    <img src="img/adso_logo_red.png" alt="ADSO logo" width="490">
+                    <figcaption id="title-line">The Arts and Design Center of Fort Walton Beach</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/art_center_logo.png" alt="Art Center logo" width="449">
+                    <figcaption class="invisible">ADSO logo</figcaption>
+                </figure>
+            </div>
         </header>
 
         <div id="container">
