Create and style logo-box
Create div id logo-box with figures of main logo and alternate logo,
style main logo figcaption as h1 for page, hide alternate logo
figcaption with github boilerplate code .visuallyhidden.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <figure>
                     <img src="img/art_center_logo.png" alt="Art Center logo" width="449">
-                    <figcaption class="invisible">ADSO logo</figcaption>
+                    <figcaption class="visuallyhidden">ADSO logo</figcaption>
                 </figure>
             </div>
         </header>
