Insert Images section with figures, style

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
 
         <div id="container">
             <section id="images">
+                <h2 class="inline">Possible Images:</h2>
+                <p class="inline">Gesture Drawing; Drink and Draw</p>
+
+                <figure>
+                    <img src="img/ballerina_sketch.jpg" alt="Gesture drawing of a ballerina" width="739">
+                    <figcaption class="visuallyhidden">Gesture Drawing</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/drink_and_draw.jpg" alt="Easel and wine image" width="1119">
+                    <figcaption class="visuallyhidden">Drink and Draw</figcaption>
+                </figure>
+
             </section>
 
             <section id="colors">
