--- a/index.html
+++ b/index.html
@@ -42,10 +42,54 @@
                     <img src="img/drink_and_draw.jpg" alt="Easel and wine image" width="1119">
                     <figcaption class="visuallyhidden">Drink and Draw</figcaption>
                 </figure>
-
             </section>
 
             <section id="colors">
+                <h2>Colors:</h2>
+                <figure>
+                    <img src="img/1f1d25.jpg" alt="blue black" width="150">
+                    <figcaption>Hex code: #1f1d25</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/ed1c24.jpg" alt="red" width="150">
+                    <figcaption>Hex code: #ed1c24</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/559cb8.jpg" alt="blue" width="150">
+                    <figcaption>Hex code: #559cb8</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/faf185.jpg" alt="yellow" width="150">
+                    <figcaption>Hex code: #faf185</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/ffffff.jpg" alt="white" width="150">
+                    <figcaption>Hex code: #ffffff</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/f9f1b1.jpg" alt="cream" width="150">
+                    <figcaption>Hex code: #f9f1b1</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/555555.jpg" alt="gray" width="150">
+                    <figcaption>Hex code: #555555</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/406fb6.jpg" alt="link blue" width="150">
+                    <figcaption>Hex code: #406fb6</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="img/84449a.jpg" alt="visited violet" width="150">
+                    <figcaption>Hex code: #84449a</figcaption>
+                </figure>
             </section>
 
             <section id="buttons">
