Add Donate and Newsletter buttons, style

--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
             </section>
 
             <section id="buttons">
+                <h2>Colors:</h2>
+
+                <figure id="donate">
+                    <img src="img/button_red.png" alt="Donate Button" width="221" class="drop-shadow">
+                    <figcaption>DONATE NOW</figcaption>
+                </figure>
+
+                <figure id="newsletter">
+                    <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="drop-shadow">
+                    <figcaption>READ THE NEWSLETTER</figcaption>
+                </figure>
+
             </section>
 
             <aside id="fonts">
