Change structure and styling for css hover switch

--- a/index.html
+++ b/index.html
@@ -96,13 +96,24 @@
                 <h2>Colors:</h2>
 
                 <figure id="donate">
-                    <img src="img/button_red.png" alt="Donate Button" width="221" class="drop-shadow">
-                    <figcaption>DONATE NOW</figcaption>
+                    <div>
+                        <img class="topimg drop-shadow" src="img/button_red.png" alt="Donate Button" width="221">
+                        <img class="middleimg drop-shadow" src="img/button_red_hover.png" alt="Donate Button" width="221">
+                        <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
+
+                        <figcaption class="one">DONATE NOW</figcaption>
+                        <figcaption class="two">THANK YOU</figcaption>
+                    </div>
                 </figure>
 
                 <figure id="newsletter">
-                    <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="drop-shadow">
-                    <figcaption>READ THE NEWSLETTER</figcaption>
+                    <div>
+                        <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="topimg drop-shadow">
+                        <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
+                        <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
+
+                        <figcaption>READ THE NEWSLETTER</figcaption>
+                    </div>
                 </figure>
 
             </section>
