Change heading for Buttons to Buttons

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </section>
 
             <section id="buttons">
-                <h2>Colors:</h2>
+                <h2>Buttons:</h2>
 
                 <figure id="donate">
                     <div>
