Add text link and footer, style

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <p>Hex: #1f1d25</p>
                 </span>
 
-
+                <p id="link">Text Link</p>
 
             </aside>
         </div>
