Replace background img with overlay bg

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <div id="overlay"></div>
+
+
         <header>
             <h1>Final - Part 2</h1>
             <p>Style Tile - <span class="italic">Version 1</span></p>
