Position Images next to each other at 500px

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <img src="img/art_center_logo.png" alt="Art Center logo" width="449">
                     <figcaption class="visuallyhidden">ADSO logo</figcaption>
                 </figure>
+                <div class="clearfix"></div>
             </div>
         </header>
 
