Add media queries and float main next to aside at 1000

--- a/index.html
+++ b/index.html
@@ -31,95 +31,96 @@
         </header>
 
         <div id="container">
-            <section id="images">
-                <h2 class="inline">Possible Images:</h2>
-                <p class="inline">Gesture Drawing; Drink and Draw</p>
+            <main>
+                <section id="images">
+                    <h2 class="inline">Possible Images:</h2>
+                    <p class="inline">Gesture Drawing; Drink and Draw</p>
 
-                <figure>
-                    <img src="img/ballerina_sketch.jpg" alt="Gesture drawing of a ballerina" width="739">
-                    <figcaption class="visuallyhidden">Gesture Drawing</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/ballerina_sketch.jpg" alt="Gesture drawing of a ballerina" width="739">
+                        <figcaption class="visuallyhidden">Gesture Drawing</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/drink_and_draw.jpg" alt="Easel and wine image" width="1119">
-                    <figcaption class="visuallyhidden">Drink and Draw</figcaption>
-                </figure>
-            </section>
+                    <figure>
+                        <img src="img/drink_and_draw.jpg" alt="Easel and wine image" width="1119">
+                        <figcaption class="visuallyhidden">Drink and Draw</figcaption>
+                    </figure>
+                </section>
 
-            <section id="colors">
-                <h2>Colors:</h2>
-                <figure>
-                    <img src="img/1f1d25.jpg" alt="blue black" width="150">
-                    <figcaption>Hex code: #1f1d25</figcaption>
-                </figure>
+                <section id="colors">
+                    <h2>Colors:</h2>
+                    <figure>
+                        <img src="img/1f1d25.jpg" alt="blue black" width="150">
+                        <figcaption>Hex code: #1f1d25</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/ed1c24.jpg" alt="red" width="150">
-                    <figcaption>Hex code: #ed1c24</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/ed1c24.jpg" alt="red" width="150">
+                        <figcaption>Hex code: #ed1c24</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/559cb8.jpg" alt="blue" width="150">
-                    <figcaption>Hex code: #559cb8</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/559cb8.jpg" alt="blue" width="150">
+                        <figcaption>Hex code: #559cb8</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/faf185.jpg" alt="yellow" width="150">
-                    <figcaption>Hex code: #faf185</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/faf185.jpg" alt="yellow" width="150">
+                        <figcaption>Hex code: #faf185</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/ffffff.jpg" alt="white" width="150">
-                    <figcaption>Hex code: #ffffff</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/ffffff.jpg" alt="white" width="150">
+                        <figcaption>Hex code: #ffffff</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/f9f1b1.jpg" alt="cream" width="150">
-                    <figcaption>Hex code: #f9f1b1</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/f9f1b1.jpg" alt="cream" width="150">
+                        <figcaption>Hex code: #f9f1b1</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/555555.jpg" alt="gray" width="150">
-                    <figcaption>Hex code: #555555</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/555555.jpg" alt="gray" width="150">
+                        <figcaption>Hex code: #555555</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/406fb6.jpg" alt="link blue" width="150">
-                    <figcaption>Hex code: #406fb6</figcaption>
-                </figure>
+                    <figure>
+                        <img src="img/406fb6.jpg" alt="link blue" width="150">
+                        <figcaption>Hex code: #406fb6</figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="img/84449a.jpg" alt="visited violet" width="150">
-                    <figcaption>Hex code: #84449a</figcaption>
-                </figure>
-            </section>
+                    <figure>
+                        <img src="img/84449a.jpg" alt="visited violet" width="150">
+                        <figcaption>Hex code: #84449a</figcaption>
+                    </figure>
+                </section>
 
-            <section id="buttons">
-                <h2>Buttons:</h2>
+                <section id="buttons">
+                    <h2>Buttons:</h2>
 
-                <figure id="donate">
-                    <div>
-                        <img class="topimg drop-shadow" src="img/button_red.png" alt="Donate Button" width="221">
-                        <img class="middleimg drop-shadow" src="img/button_red_hover.png" alt="Donate Button" width="221">
-                        <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
+                    <figure id="donate">
+                        <div>
+                            <img class="topimg drop-shadow" src="img/button_red.png" alt="Donate Button" width="221">
+                            <img class="middleimg drop-shadow" src="img/button_red_hover.png" alt="Donate Button" width="221">
+                            <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
 
-                        <figcaption class="one">DONATE NOW</figcaption>
-                        <figcaption class="two">THANK YOU</figcaption>
-                    </div>
-                </figure>
+                            <figcaption class="one">DONATE NOW</figcaption>
+                            <figcaption class="two">THANK YOU</figcaption>
+                        </div>
+                    </figure>
 
-                <figure id="newsletter">
-                    <div>
-                        <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="topimg drop-shadow">
-                        <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
-                        <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
+                    <figure id="newsletter">
+                        <div>
+                            <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="topimg drop-shadow">
+                            <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
+                            <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
 
-                        <figcaption>READ THE NEWSLETTER</figcaption>
-                    </div>
-                </figure>
+                            <figcaption>READ THE NEWSLETTER</figcaption>
+                        </div>
+                    </figure>
 
-            </section>
-
+                </section>
+            </main>
             <aside id="fonts">
                 <h2>Fonts:</h2>
                 <span class="lighter">
