Add meta viewport tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Final - Part 2</title>
     <meta name="description" content="Style Tile and Style Prototype of ADSO, the Art and Design Society of Fort Walton Beach.">
 
