Move art center logo to bottom

--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
                     <img src="img/adso_logo_red.png" alt="ADSO logo" width="490">
                     <figcaption id="title-line">The Arts and Design Center of Fort Walton Beach</figcaption>
                 </figure>
-
-                <figure>
-                    <img src="img/art_center_logo.png" alt="Art Center logo" width="449">
-                    <figcaption class="visuallyhidden">ADSO logo</figcaption>
-                </figure>
                 <div class="clearfix"></div>
             </div>
         </header>
@@ -145,6 +140,10 @@
                 <p id="link">Text Link</p>
 
             </aside>
+            <figure>
+                <img src="img/logo2.png" alt="Art Center logo" width="449">
+                <figcaption class="visuallyhidden">ADSO logo</figcaption>
+            </figure>
         </div>
 
         <footer></footer>
