Change button color images in html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <figure id="donate">
                         <div>
                             <img class="topimg drop-shadow" src="img/button_red.png" alt="Donate Button" width="221">
-                            <img class="middleimg drop-shadow" src="img/button_red_hover.png" alt="Donate Button" width="221">
+                            <img class="middleimg drop-shadow" src="img/button_yellow.png" alt="Donate Button" width="221">
                             <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
 
                             <figcaption class="one">DONATE NOW</figcaption>
@@ -88,8 +88,8 @@
                     <figure id="newsletter">
                         <div>
                             <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="topimg drop-shadow">
-                            <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
-                            <img src="img/button_yellow_hover.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
+                            <img src="img/button_black.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
+                            <img src="img/button_black.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
 
                             <figcaption>READ THE NEWSLETTER</figcaption>
                         </div>
