Change css to target new button images and colors

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                             <img class="middleimg drop-shadow" src="img/button_yellow.png" alt="Donate Button" width="221">
                             <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
 
-                            <figcaption class="one">DONATE NOW</figcaption>
-                            <figcaption class="two">THANK YOU</figcaption>
+                            <figcaption class="one-1">DONATE NOW</figcaption>
+                            <figcaption class="one-2">THANK YOU</figcaption>
                         </div>
                     </figure>
 
@@ -91,7 +91,7 @@
                             <img src="img/button_black.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
                             <img src="img/button_black.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
 
-                            <figcaption>READ THE NEWSLETTER</figcaption>
+                            <figcaption class="two">READ THE NEWSLETTER</figcaption>
                         </div>
                     </figure>
 
