Add texture image section to html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="container">
             <main>
                 <section id="images">
-                    <h2 class="inline">Possible Images:</h2>
+                    <h2>Possible Images:</h2>
 
                     <figure>
                         <img src="img/ballerina_sketch.jpg" alt="Gesture drawing of a ballerina" width="739">
@@ -39,6 +39,20 @@
                     <figure>
                         <img src="img/drink_and_draw.jpg" alt="Easel and wine image" width="1119">
                         <figcaption>Drink and Draw</figcaption>
+                    </figure>
+                </section>
+
+                <section id="textures">
+                    <h2>Possible Textures:</h2>
+
+                    <figure>
+                        <img src="img/texture1.jpg" alt="Watercolor paper" width="340">
+                        <figcaption>Watercolor paper</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="img/texture2.jpg" alt="Unryu paper" width="340">
+                        <figcaption>Unryu Paper</figcaption>
                     </figure>
                 </section>
 
