Update Logo2 slice, add oval background

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 <p id="link">Text Link</p>
 
             </aside>
-            <figure>
+
+            <figure id="logo2">
                 <img src="img/logo2.png" alt="Art Center logo" width="449">
                 <figcaption class="visuallyhidden">ADSO logo</figcaption>
             </figure>
