Reduce padding on logo 2 and move outside of aside

--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
                     <p>Hex: #1f1d25</p>
                 </span>
 
-                <p id="link">Text Link</p>
+
 
             </aside>
-
+            <p id="link">Text Link</p>
+            <div class="clearfix"></div>
             <figure id="logo2">
                 <img src="img/logo2.png" alt="Art Center logo" width="449">
                 <figcaption class="visuallyhidden">ADSO logo</figcaption>
