Change ART Center logo image and add drop shadow

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p id="link">Text Link</p>
             <div class="clearfix"></div>
             <figure id="logo2">
-                <img src="img/logo2.png" alt="Art Center logo" width="449">
+                <img src="img/logo2-2.png" alt="Art Center logo" width="449" class="drop-shadow">
                 <figcaption class="visuallyhidden">ADSO logo</figcaption>
             </figure>
         </div>
