--- a/index.html
+++ b/index.html
@@ -124,18 +124,25 @@
                     <p>Hex: #ed1c24</p>
                 </span>
 
-                <p>Cat Ipsum: Lick face, hiss at owner, pee a lot, and meow repeatedly. Purrrrrr eat muffins and poutine until owner comes back. Plan steps for world domination, cough hairball on conveniently placed pants, chase after silly colored fish toys around the house and munch on tasty moths. Sit in window and stare; oooh, a bird, yum. Hide head under blanket so no one can see. Eat plants, meow, and throw up because I ate plants. Plop down in the middle where everybody walks and hide when guests come over. Stare at the wall, play with food and get confused by dust. if it smells like fish, eat as much as you wish.  Annoy owner until he gives food say meow repeatedly.</p>
+                <p>Body font in Cat Ipsum: Lick face, hiss at owner, pee a lot, and meow repeatedly. Purrrrrr eat muffins and poutine until owner comes back. Plan steps for world domination, cough hairball on conveniently placed pants, chase after silly colored fish toys around the house and munch on tasty moths. Sit in window and stare; oooh, a bird, yum. Hide head under blanket so no one can see. Eat plants, meow, and throw up because I ate plants. Plop down in the middle where everybody walks and hide when guests come over. Stare at the wall, play with food and get confused by dust. if it smells like fish, eat as much as you wish.  Annoy owner until he gives food say meow repeatedly.</p>
 
                 <span class="lighter">
                     <p>Font: Fira Sans Condensed Regular</p>
                     <p>Hex: #1f1d25</p>
                 </span>
 
+                <p id="link">Text Link</p>
 
+                <a href="https://fonts.google.com/specimen/Vollkorn" target="_blank"><h4>Vollkorn Font</h4></a>
+                <a href="https://fonts.google.com/specimen/Fira+Sans+Condensed" target="_blank"><h4>Fira Sans Condensed Font</h4></a>
 
             </aside>
-            <p id="link">Text Link</p>
-            <div class="clearfix"></div>
+
+
+
+
+
+
             <figure id="logo2">
                 <img src="img/logo2-2.png" alt="Art Center logo" width="449" class="drop-shadow">
                 <figcaption class="visuallyhidden">ADSO logo</figcaption>
