Style new h4 text links

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                     <p>Hex: #1f1d25</p>
                 </span>
 
-                <p id="link">Text Link</p>
 
-                <a href="https://fonts.google.com/specimen/Vollkorn" target="_blank"><h4>Vollkorn Font</h4></a>
-                <a href="https://fonts.google.com/specimen/Fira+Sans+Condensed" target="_blank"><h4>Fira Sans Condensed Font</h4></a>
+                    <h4><a href="https://fonts.google.com/specimen/Vollkorn" target="_blank">Vollkorn Font</a></h4>
+                    <h4><a href="https://fonts.google.com/specimen/Fira+Sans+Condensed" target="_blank">Fira Sans Condensed Font</a></h4>
+
 
             </aside>
 
