Restructure html to allow for 3 column layout

--- a/index.html
+++ b/index.html
@@ -28,89 +28,100 @@
 
         <div id="container">
             <main>
-                <section id="images">
-                    <h2>Possible Images:</h2>
+                <div id="column1">
+                    <section id="images">
+                        <h2>Possible Images:</h2>
 
-                    <figure>
-                        <img src="img/ballerina_sketch.jpg" alt="Gesture drawing of a ballerina" width="739">
-                        <figcaption>Gesture Drawing</figcaption>
-                    </figure>
+                        <figure>
+                            <img src="img/ballerina_sketch.jpg" alt="Gesture drawing of a ballerina" width="739">
+                            <figcaption>Gesture Drawing</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="img/drink_and_draw.jpg" alt="Easel and wine image" width="1119">
-                        <figcaption>Drink and Draw</figcaption>
-                    </figure>
-                </section>
+                        <figure>
+                            <img src="img/drink_and_draw.jpg" alt="Easel and wine image" width="1119">
+                            <figcaption>Drink and Draw</figcaption>
+                        </figure>
+                    </section>
 
-                <section id="textures">
-                    <h2>Possible Textures:</h2>
+                    <section id="colors">
+                        <h2>Colors:</h2>
+                        <figure>
+                            <img src="img/1f1d25.jpg" alt="blue black" width="150">
+                            <figcaption>Hex code: #1f1d25</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="img/texture1.jpg" alt="Watercolor paper" width="340">
-                        <figcaption>Watercolor paper</figcaption>
-                    </figure>
+                        <figure>
+                            <img src="img/ed1c24.jpg" alt="red" width="150">
+                            <figcaption>Hex code: #ed1c24</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="img/texture2.jpg" alt="Unryu paper" width="340">
-                        <figcaption>Unryu Paper</figcaption>
-                    </figure>
-                </section>
+                        <figure>
+                            <img src="img/faf185.jpg" alt="yellow" width="150">
+                            <figcaption>Hex code: #faf185</figcaption>
+                        </figure>
 
-                <section id="colors">
-                    <h2>Colors:</h2>
-                    <figure>
-                        <img src="img/1f1d25.jpg" alt="blue black" width="150">
-                        <figcaption>Hex code: #1f1d25</figcaption>
-                    </figure>
+                        <figure>
+                            <img src="img/ffffff.jpg" alt="white" width="150">
+                            <figcaption>Hex code: #ffffff</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="img/ed1c24.jpg" alt="red" width="150">
-                        <figcaption>Hex code: #ed1c24</figcaption>
-                    </figure>
+                        <figure>
+                            <img src="img/406fb6.jpg" alt="link blue" width="150">
+                            <figcaption>Hex code: #406fb6</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="img/faf185.jpg" alt="yellow" width="150">
-                        <figcaption>Hex code: #faf185</figcaption>
-                    </figure>
+                    </section>
 
-                    <figure>
-                        <img src="img/ffffff.jpg" alt="white" width="150">
-                        <figcaption>Hex code: #ffffff</figcaption>
-                    </figure>
+                    <section id="buttons">
+                        <h2>Buttons:</h2>
 
-                    <figure>
-                        <img src="img/406fb6.jpg" alt="link blue" width="150">
-                        <figcaption>Hex code: #406fb6</figcaption>
-                    </figure>
+                        <figure id="donate">
+                            <div>
+                                <img class="topimg drop-shadow" src="img/button_red.png" alt="Donate Button" width="221">
+                                <img class="middleimg drop-shadow" src="img/button_yellow.png" alt="Donate Button" width="221">
+                                <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
 
-                </section>
+                                <figcaption class="one-1">DONATE NOW</figcaption>
+                                <figcaption class="one-2">THANK YOU</figcaption>
+                            </div>
+                        </figure>
 
-                <section id="buttons">
-                    <h2>Buttons:</h2>
+                        <figure id="newsletter">
+                            <div>
+                                <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="topimg drop-shadow">
+                                <img src="img/button_black.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
+                                <img src="img/button_black.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
 
-                    <figure id="donate">
-                        <div>
-                            <img class="topimg drop-shadow" src="img/button_red.png" alt="Donate Button" width="221">
-                            <img class="middleimg drop-shadow" src="img/button_yellow.png" alt="Donate Button" width="221">
-                            <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
+                                <figcaption class="two">READ THE NEWSLETTER</figcaption>
+                            </div>
+                        </figure>
+                    </section>
+                </div>
 
-                            <figcaption class="one-1">DONATE NOW</figcaption>
-                            <figcaption class="one-2">THANK YOU</figcaption>
+                <div id="column2">
+                    <section>
+                        <div id="textures">
+                            <h2>Possible Textures:</h2>
+
+                            <figure>
+                                <img src="img/texture1.jpg" alt="Watercolor paper" width="340">
+                                <figcaption>Watercolor paper</figcaption>
+                            </figure>
+
+                            <figure>
+                                <img src="img/texture2.jpg" alt="Unryu paper" width="340">
+                                <figcaption>Unryu Paper</figcaption>
+                            </figure>
                         </div>
-                    </figure>
 
-                    <figure id="newsletter">
-                        <div>
-                            <img src="img/button_yellow.png" alt="Newsletter Button" width="221" class="topimg drop-shadow">
-                            <img src="img/button_black.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
-                            <img src="img/button_black.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
-
-                            <figcaption class="two">READ THE NEWSLETTER</figcaption>
-                        </div>
-                    </figure>
-
-                </section>
+                        <figure id="logo2">
+                            <img src="img/logo2-2.png" alt="Art Center logo" width="449" class="drop-shadow">
+                            <figcaption class="visuallyhidden">ADSO logo</figcaption>
+                        </figure>
+                    </section>
+                </div>
             </main>
+
             <aside id="fonts">
                 <h2>Fonts:</h2>
                 <span class="lighter">
@@ -138,15 +149,6 @@
 
             </aside>
 
-
-
-
-
-
-            <figure id="logo2">
-                <img src="img/logo2-2.png" alt="Art Center logo" width="449" class="drop-shadow">
-                <figcaption class="visuallyhidden">ADSO logo</figcaption>
-            </figure>
         </div>
 
         <footer></footer>
