Add adjectives to Fonts section below h2 header

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
 
             <aside id="fonts">
                 <h2>Fonts:</h2>
+
+                <ul id="adjectives" class="italic">
+                    <li>educational</li>
+                    <li>inclusive</li>
+                    <li>friendly</li>
+                    <li>unique</li>
+                </ul>
+
                 <span class="lighter">
                     <p>Font: Vollkorn Bold</p>
                     <p>Hex: #1f1d25</p>
