Remove extra figcaption from Newsletter button
Change Newsletter button by removing the second figcaption, then create
two captions in the figcaption using spans with id's. Finally, correct
the css to reflect the changes. This is a fix for a validator error.

--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
                                 <img class="middleimg drop-shadow" src="img/button_yellow.png" alt="Donate Button" width="221">
                                 <img class="bottomimg drop-shadow" src="img/button_blue.png" alt="Donate Button" width="221">
 
-                                <figcaption class="one-1">DONATE NOW</figcaption>
-                                <figcaption class="one-2">THANK YOU</figcaption>
-
+                                <figcaption><span id="one-1">DONATE NOW</span><span id="one-2">THANK YOU</span></figcaption>
                         </figure>
 
                         <figure id="newsletter">
@@ -92,7 +90,7 @@
                                 <img src="img/button_black.png" alt="Newsletter Button" width="221" class="middleimg drop-shadow">
                                 <img src="img/button_black.png" alt="Newsletter Button" width="221" class="bottomimg drop-shadow">
 
-                                <figcaption class="two">READ THE NEWSLETTER</figcaption>
+                                <figcaption id="two">READ THE NEWSLETTER</figcaption>
 
                         </figure>
                     </section>
