Correct CSS for changing span to div

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
                 <p>Body font in Cat Ipsum: Lick face, hiss at owner, pee a lot, and meow repeatedly. Purrrrrr eat muffins and poutine until owner comes back. Plan steps for world domination, cough hairball on conveniently placed pants, chase after silly colored fish toys around the house and munch on tasty moths. Sit in window and stare; oooh, a bird, yum. Hide head under blanket so no one can see. Eat plants, meow, and throw up because I ate plants. Plop down in the middle where everybody walks and hide when guests come over. Stare at the wall, play with food and get confused by dust. if it smells like fish, eat as much as you wish.  Annoy owner until he gives food say meow repeatedly.</p>
 
-                <span class="lighter">
+                <div class="lighter">
                     <p>Font: Fira Sans Condensed Regular</p>
                     <p>Hex: #1f1d25</p>
-                </span>
+                </div>
 
                 <h4><a href="https://fonts.google.com/specimen/Vollkorn" target="_blank">Vollkorn Font</a></h4>
                 <h4><a href="https://fonts.google.com/specimen/Fira+Sans+Condensed" target="_blank">Fira Sans Condensed Font</a></h4>
