--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                     <p>Hex: #1f1d25</p>
                 </div>
 
+                <h3>Text Links:</h3>
                 <h4><a href="https://fonts.google.com/specimen/Vollkorn" target="_blank">Vollkorn Font</a></h4>
                 <h4><a href="https://fonts.google.com/specimen/Fira+Sans+Condensed" target="_blank">Fira Sans Condensed Font</a></h4>
 
