--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <footer></footer>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 </body>
 
 </html>
